--- a/.choreo/endpoints.yaml
+++ b/.choreo/endpoints.yaml
@@ -4,7 +4,7 @@ version: 0.1
 # +required List of endpoints to create
 endpoints:
   # +required Unique name for the endpoint. (This name will be used when generating the managed API)
-  - name: RequestInfo
+  - name: RequestInfo-Internal
     # +required Numeric port value that gets exposed via this endpoint
     port: 8080
     # +required Type of the traffic this endpoint is accepting. Example: REST, GraphQL, etc.
@@ -15,7 +15,43 @@ endpoints:
     networkVisibility: Organization
     # +optional Context (base path) of the API that is exposed via this endpoint.
     # This is mandatory if the endpoint type is set to REST or GraphQL.
-    context: /
+    context: /internal
+    # +optional Path to the schema definition file. Defaults to wild card route if not provided
+    # This is only applicable to REST endpoint types.
+    # The path should be relative to the docker context.
+    schemaFilePath: request_info_openapi.yaml
+
+  # +required Unique name for the endpoint. (This name will be used when generating the managed API)
+  - name: RequestInfo-External
+    # +required Numeric port value that gets exposed via this endpoint
+    port: 8080
+    # +required Type of the traffic this endpoint is accepting. Example: REST, GraphQL, etc.
+    # Allowed values: REST, GraphQL, GRPC
+    type: REST
+    # +optional Network level visibility of this endpoint. Defaults to Project
+    # Accepted values: Project|Organization|Public.
+    networkVisibility: Public
+    # +optional Context (base path) of the API that is exposed via this endpoint.
+    # This is mandatory if the endpoint type is set to REST or GraphQL.
+    context: /external
+    # +optional Path to the schema definition file. Defaults to wild card route if not provided
+    # This is only applicable to REST endpoint types.
+    # The path should be relative to the docker context.
+    schemaFilePath: request_info_openapi.yaml
+    
+  # +required Unique name for the endpoint. (This name will be used when generating the managed API)
+  - name: RequestInfo-Project
+    # +required Numeric port value that gets exposed via this endpoint
+    port: 8080
+    # +required Type of the traffic this endpoint is accepting. Example: REST, GraphQL, etc.
+    # Allowed values: REST, GraphQL, GRPC
+    type: REST
+    # +optional Network level visibility of this endpoint. Defaults to Project
+    # Accepted values: Project|Organization|Public.
+    networkVisibility: Project
+    # +optional Context (base path) of the API that is exposed via this endpoint.
+    # This is mandatory if the endpoint type is set to REST or GraphQL.
+    context: /project
     # +optional Path to the schema definition file. Defaults to wild card route if not provided
     # This is only applicable to REST endpoint types.
     # The path should be relative to the docker context.
